option('AIRCOPY', type: 'boolean', value: false, description: 'Enable Air Copy')
option('UART', type: 'boolean', value: true, description: 'Enable UART')
option('USB', type: 'boolean', value: true, description: 'Enable USB')
option('SERIAL_SCREENCAST', type: 'boolean', value: false, description: 'Enable Serial Screencast')
option('UART_CMD_RSSI', type: 'boolean', value: true, description: 'Enable UART RSSI Command')
option('UART_CMD_BATT', type: 'boolean', value: true, description: 'Enable UART Battery Command')
option('UART_CMD_ID', type: 'boolean', value: true, description: 'Enable UART ID Command')
option('EXTRA_UART_CMD', type: 'boolean', value: false, description: 'Enable Extra UART Commands')
option('FMRADIO', type: 'boolean', value: false, description: 'Enable FM Radio')
option('VOICE', type: 'boolean', value: false, description: 'Enable Voice')
option('PWRON_PASSWORD', type: 'boolean', value: false, description: 'Enable Power-on Password')
option('FLASHLIGHT', type: 'boolean', value: true, description: 'Enable Flashlight')
option('ALARM', type: 'boolean', value: false, description: 'Enable Alarm')
option('TX1750', type: 'boolean', value: true, description: 'Enable TX 1750Hz')
option('VOX', type: 'boolean', value: true, description: 'Enable VOX')
option('NOAA', type: 'boolean', value: false, description: 'Enable NOAA')
option('NARROWER_BW_FILTER', type: 'boolean', value: true, description: 'Enable Narrower Bandwidth Filter')
option('WIDE_RX', type: 'boolean', value: true, description: 'Enable Wide RX')
option('TX_NON_FM', type: 'boolean', value: true, description: 'Enable TX Non-FM')
option('SQUELCH_MORE_SENSITIVE', type: 'boolean', value: true, description: 'Enable More Sensitive Squelch')
option('CTCSS_TAIL_PHASE_SHIFT', type: 'boolean', value: false, description: 'Enable CTCSS Tail Phase Shift')
option('REDUCE_LOW_MID_TX_POWER', type: 'boolean', value: false, description: 'Enable Reduce Low/Mid TX Power')
option('BYP_RAW_DEMODULATORS', type: 'boolean', value: true, description: 'Enable Bypass/Raw Demodulators')
option('RESCUE_OPERATIONS', type: 'boolean', value: false, description: 'Enable Rescue Operations')
option('SCAN_RANGES', type: 'boolean', value: true, description: 'Enable Scan Ranges')
option('BIG_FREQ', type: 'boolean', value: true, description: 'Enable Big Frequency Display')
option('SMALL_BOLD', type: 'boolean', value: true, description: 'Enable Small Bold Font')
option('INVERTED_LCD_MODE', type: 'boolean', value: true, description: 'Enable Inverted LCD Mode')
option('LCD_CONTRAST_OPTION', type: 'boolean', value: true, description: 'Enable LCD Contrast Option')
option('RSSI_BAR', type: 'boolean', value: true, description: 'Enable RSSI Bar')
option('MIC_BAR', type: 'boolean', value: true, description: 'Enable Audio Bar')
option('SHOW_CHARGE_LEVEL', type: 'boolean', value: false, description: 'Enable Show Charge Level')
option('USBC_CHARGING_INDICATOR', type: 'boolean', value: true, description: 'Enable USB-C Charging Indicator')
option('REVERSE_BAT_SYMBOL', type: 'boolean', value: false, description: 'Enable Reverse Battery Symbol')
option('BOOT_BEEPS', type: 'boolean', value: false, description: 'Enable Boot Beeps')
option('BOOT_RESUME_STATE', type: 'boolean', value: true, description: 'Enable Boot Resume State')
option('DEEP_SLEEP_MODE', type: 'boolean', value: true, description: 'Enable Deep Sleep Mode')
option('RX_TX_TIMER_DISPLAY', type: 'boolean', value: true, description: 'Enable RX/TX Timer Display')
option('NO_CODE_SCAN_TIMEOUT', type: 'boolean', value: true, description: 'Enable No Code Scan Timeout')
option('BLMIN_TMP_OFF', type: 'boolean', value: false, description: 'Enable BLMIN_TMP_OFF')
option('KEEP_MEM_NAME', type: 'boolean', value: true, description: 'Enable Keep Memory Name')
option('COPY_CHAN_TO_VFO', type: 'boolean', value: true, description: 'Enable Copy Channel to VFO')
option('CUSTOM_MENU_LAYOUT', type: 'boolean', value: true, description: 'Enable Custom Menu Layout')
option('CW_KEYER', type: 'boolean', value: true, description: 'Enable CW Keyer')
option('DTMF_CALLING', type: 'boolean', value: false, description: 'Enable DTMF Calling')
option('SPECTRUM', type: 'boolean', value: false, description: 'Enable Spectrum Analyzer')
option('SPECTRUM_WATERFALL', type: 'boolean', value: true, description: 'Enable Spectrum Waterfall')
option('SPECTRUM_EXTENSIONS', type: 'boolean', value: true, description: 'Enable Spectrum Extensions')
option('SPECTRUM_EXTRA_VALUES', type: 'boolean', value: true, description: 'Enable Spectrum Extra Values')
option('APP_BREAKOUT_GAME', type: 'boolean', value: false, description: 'Enable Breakout Game')
option('REGA', type: 'boolean', value: false, description: 'Enable REGA')
option('LIVESEEK', type: 'boolean', value: true, description: 'Enable LiveSeek (RSSI Spectrum on main screen)')
option('PMR446_FREQUENCY_BAND', type: 'boolean', value: false, description: 'Enable PMR446 Frequency Band')
option('GMRS_FRS_MURS_BANDS', type: 'boolean', value: false, description: 'Enable GMRS/FRS/MURS Bands')
option('FREQUENCY_LOCK_REGION_CA', type: 'boolean', value: true, description: 'Enable Frequency Lock Region CA')
option('CUSTOM_FIRMWARE_MODS', type: 'boolean', value: true, description: 'Enable Custom Firmware Mods')
option('SYSTEM_INFO_MENU', type: 'boolean', value: false, description: 'Enable System Info Menu')
option('F_CAL_MENU', type: 'boolean', value: false, description: 'Enable F_CAL Menu')
option('RESET_CHANNEL_FUNCTION', type: 'boolean', value: false, description: 'Enable Reset Channel Function')
option('EEPROM_HEXDUMP', type: 'boolean', value: true, description: 'Enable EEPROM Hexdump')
option('FIRMWARE_DEBUG_LOGGING', type: 'boolean', value: false, description: 'Enable Firmware Debug Logging')
option('IDENTIFIER', type: 'boolean', value: true, description: 'Enable Identifier')
option('AM_FIX', type: 'boolean', value: true, description: 'Enable AM Fix')
option('AM_FIX_SHOW_DATA', type: 'boolean', value: false, description: 'Enable AM Fix Show Data')
option('SCRAMBLER', type: 'boolean', value: true, description: 'Enable Voice Scrambler')
option('ON_DEVICE_PROGRAMMING', type: 'boolean', value: true, description: 'Enable On-Device Programming')
option('SCAN_LIST_EDITING', type: 'boolean', value: true, description: 'Enable Scan List Editing')
option('TX_OFFSET', type: 'boolean', value: true, description: 'Enable TX Offset Settings')
option('BATTERY_CHARGING', type: 'boolean', value: true, description: 'Enable Battery Charging Logic/UI')
option('AGC_SHOW_DATA', type: 'boolean', value: false, description: 'Enable AGC Show Data')
option('UART_RW_BK_REGS', type: 'boolean', value: false, description: 'Enable UART RW BK Regs')
option('SWD', type: 'boolean', value: false, description: 'Enable SWD')
option('FASTER_CHANNEL_SCAN', type: 'boolean', value: true, description: 'Enable Faster Channel Scan')
option('CRYPTO', type: 'boolean', value: true, description: 'Enable Advanced Crypto Library (ChaCha20, Poly1305, TRNG)')
option('STORAGE_ENCRYPTION', type: 'boolean', value: true, description: 'Enable Storage Encryption layer')
option('PASSCODE', type: 'boolean', value: true, description: 'Enable Device Passcode protection')
option('TRNG_SENSORS', type: 'boolean', value: true, description: 'Enable TRNG Sensors (Temp/VREF entropy)')
option('EXTRA_ROGER', type: 'boolean', value: true, description: 'Enable Extra Roger Beep presets')
option('CUSTOM_ROGER', type: 'boolean', value: true, description: 'Enable Custom Roger Beep support via EEPROM')
option('EDITION_STRING', type: 'string', value: 'Custom', description: 'Edition String')
